--- a/GraphicsAndGears/GraphicsAndGears.csproj
+++ b/GraphicsAndGears/GraphicsAndGears.csproj
@@ -196,6 +196,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Car.cs" />
+    <Compile Include="Controllers\Customer.cs" />
     <Compile Include="Controllers\GearsController.cs" />
     <Compile Include="Controllers\GraphicsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
