--- a/GraphicsAndGears/Web.config
+++ b/GraphicsAndGears/Web.config
@@ -93,4 +93,15 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+    <system.net>
+      <mailSettings>
+        <smtp from="ddavis70@lycos.com">
+          <network host="smtp.mailtrap.io"
+           port="2525"
+           userName="22f0880a3b774d"
+           password="cd7701d2e145b3"
+           enableSsl="true"/>
+        </smtp>
+      </mailSettings>
+    </system.net>
 </configuration>
