--- a/GraphicsAndGears/Web.config
+++ b/GraphicsAndGears/Web.config
@@ -96,11 +96,7 @@
     <system.net>
       <mailSettings>
         <smtp from="ddavis70@lycos.com">
-          <network host="smtp.mailtrap.io"
-           port="2525"
-           userName="22f0880a3b774d"
-           password="cd7701d2e145b3"
-           enableSsl="true"/>
+          <network host="smtp.mailtrap.io" port="2525" userName="22f0880a3b774d" password="cd7701d2e145b3" enableSsl="true" />
         </smtp>
       </mailSettings>
     </system.net>
