--- a/GraphicsAndGears/GraphicsAndGears.csproj
+++ b/GraphicsAndGears/GraphicsAndGears.csproj
@@ -216,6 +216,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\Fuller-Transmissions.jpg" />
     <Content Include="Content\Images\gearsLogo.jpg" />
     <Content Include="Content\Images\graphicsLogo.jpg" />
     <Content Include="favicon.ico" />
@@ -238,6 +239,8 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\knockout-3.4.2.debug.js" />
     <Content Include="Scripts\knockout-3.4.2.js" />
+    <Content Include="Scripts\knockout.validation.js" />
+    <Content Include="Scripts\knockout.validation.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
@@ -279,6 +282,7 @@
     <Content Include="Views\Graphics\Home.cshtml" />
     <Content Include="Views\Gears\PartsRequest.cshtml" />
     <Content Include="Views\Gears\Success.cshtml" />
+    <Content Include="Scripts\knockout.validation.min.js.map" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
